<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/outline_padding_horizontal"
    android:paddingVertical="@dimen/outline_padding_vertical"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/hide_input"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/hide_input_info" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/radioButtonPlaintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/plaintext"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/radioButtonFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:textColor="@color/textColor" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/layoutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_round"
                android:orientation="vertical"
                android:padding="15dp">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hide_input_text_hint"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:maxLines="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="?android:attr/colorBackground"
                android:paddingHorizontal="10dp"
                android:text="@string/border_text" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/containerFilePickerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/next" />
    </LinearLayout>
</ScrollView>