<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:clipToPadding="false"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/outline_padding_horizontal"
        android:paddingVertical="@dimen/outline_padding_vertical"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAboutPunchline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/about_punchline"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAboutVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/about_version"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/textColorSecondary"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAboutPunchline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="bottom|center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAboutVersion">

                <Button
                    android:id="@+id/buttonAboutEmail"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:padding="10dp"
                    android:text="@string/about_email" />

                <Button
                    android:id="@+id/buttonAboutWeb"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_web_24"
                    android:padding="10dp"
                    android:text="@string/about_web" />

                <Button
                    android:id="@+id/buttonAboutGitHub"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/github"
                    android:padding="10dp"
                    android:text="@string/about_github" />

                <TextView
                    android:id="@+id/textViewAboutFAQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/about_faq"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textViewAboutLicenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/about_licenses"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>