<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/outline_padding_horizontal"
    android:paddingVertical="@dimen/outline_padding_vertical"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewStatisticsBytes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/reveal_statistics_bytes"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/statistics"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/reveal_statistics_reveal_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewStatisticsRevealTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="10 ms" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/image_processing"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_statistics_image_processing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="113 ms" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/total_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewStatisticsTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="123 ms" />
            </TableRow>
        </TableLayout>

        <FrameLayout
            android:id="@+id/containerResult"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="20dp"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>